34-API-Gateway/1-Deploy-app-webcolor-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app-webcolor-blue
  name: app-webcolor-blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-webcolor-blue
  template:
    metadata:
      labels:
        app: app-webcolor-blue
    spec:
      containers:
      - image: ghcr.io/wiktorvip/app-webcolor:blue
        name: app-webcolor
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: svc-app-webcolor-blue
spec:
  selector:
    app: app-webcolor-blue
  type: ClusterIP
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
